--- a/static/index.html
+++ b/static/index.html
@@ -99,7 +99,7 @@
     </main>
 
     <script>
-        const proxyBase = "http://localhost:8080/proxy?url=";
+        const proxyBase = "https://wiki-unblocker.herokuapp.com/?url=";
         const absoluteURL = u => new URL(u, "https://en.wikipedia.org").href;
 
         async function fetchAndClean(url, targetDoc) {
