--- a/static/index.html
+++ b/static/index.html
@@ -99,7 +99,7 @@
     </main>
 
     <script>
-        const proxyBase = "https://your-app.onrender.com/proxy?url=";
+        const proxyBase = "https://wikiviewer.onrender.com/proxy?url=";
         const absoluteURL = u => new URL(u, "https://en.wikipedia.org").href;
 
         async function fetchAndClean(url, targetDoc) {
