changed instructions thanks molly

--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
   </header>
 
   <main id="inputSection">
-    <label for="wikiUrl">Search a topic:</label>
+    <label for="wikiUrl">Enter a Wikipedia articles URL:</label>
     <input type="url" id="wikiUrl" placeholder="https://en.wikipedia.org/wiki/Cat" />
     <button id="loadBtn">Load Article</button>
     <div id="status"></div>
